--- a/k8s/ingress.yaml
+++ b/k8s/ingress.yaml
@@ -5,16 +5,10 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
-    nginx.ingress.kubernetes.io/ssl-redirect: "true"
-    cert-manager.io/cluster-issuer: letsencrypt-prod
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
-  tls:
-  - hosts:
-    - employee-management.yourdomain.com
-    secretName: employee-management-tls
   rules:
-  - host: employee-management.yourdomain.com
-    http:
+  - http:
       paths:
       - path: /
         pathType: Prefix
