Addded latest changes

--- a/src/EmployeeManagement.Web/appsettings.json
+++ b/src/EmployeeManagement.Web/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=EmployeeManagement;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=true;"
+  },
+  "UseInMemoryDatabase": true,
+  "CruiseShip": {
+    "ShipId": "Development",
+    "ShipName": "Development Environment"
+  }
 }
