--- a/src/EmployeeManagement.Web/appsettings.Production.json
+++ b/src/EmployeeManagement.Web/appsettings.Production.json
@@ -8,14 +8,11 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sqlserver;Database=EmployeeManagement;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=true;"
+    "DefaultConnection": "Server=localhost;Database=EmployeeManagement;User Id=sa;Password=Statictree234!;TrustServerCertificate=true;"
   },
-  "UseInMemoryDatabase": false,
+  "UseInMemoryDatabase": true,
   "CruiseShip": {
-    "ShipId": "${SHIP_ID}",
-    "ShipName": "${SHIP_NAME}",
-    "UpdateCheckInterval": "${UPDATE_CHECK_INTERVAL}",
-    "EnableDataSync": "${ENABLE_DATA_SYNC}",
-    "CentralApiUrl": "${CENTRAL_API_URL}"
+    "ShipId": "Development",
+    "ShipName": "Development Environment"
   }
 }
