--- a/src/EmployeeManagement.Web/appsettings.json
+++ b/src/EmployeeManagement.Web/appsettings.json
@@ -6,12 +6,14 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=EmployeeManagement;User Id=sa;Password=YourStrong@Passw0rd;TrustServerCertificate=true;"
-  },
-  "UseInMemoryDatabase": true,
-  "CruiseShip": {
-    "ShipId": "Development",
-    "ShipName": "Development Environment"
+
+    "ConnectionStrings": {
+      "DefaultConnection": "Server=localhost;Database=EmployeeManagement;User Id=sa;Password=Statictree234!;TrustServerCertificate=true;"
+    },
+    "UseInMemoryDatabase": true,
+    "CruiseShip": {
+      "ShipId": "Development",
+      "ShipName": "Development Environment"
+    }
   }
-}
+
