--- a/src/EmployeeManagement.Web/EmployeeManagement.Web.csproj
+++ b/src/EmployeeManagement.Web/EmployeeManagement.Web.csproj
@@ -9,6 +9,7 @@
     <PackageReference Include="DevExpress.Blazor" Version="25.1.3" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="9.0.0" />
     <PackageReference Include="Microsoft.Extensions.Diagnostics.HealthChecks.EntityFrameworkCore" Version="9.0.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="9.0.0" />
   </ItemGroup>
 
   <PropertyGroup>
